--- a/FrontEnd/src/app/components/login/login.component.html
+++ b/FrontEnd/src/app/components/login/login.component.html
@@ -2,18 +2,15 @@
 style="text-align:center"
 data-aos="fade-down" data-aos-duration="1000">
 	<h2>Login</h2>
-	<form>
+	<form #f="ngForm" (ngSubmit)="onLogin()" novalidate>
 	  <div class="inputBox">
-		<input type="text" name="Username" required onkeyup="this.setAttribute('value', this.value);" value="">
+		<input type="text" id="nombreUsuario" name="nombreUsuario" [(ngModel)]="nombreUsuario" required/>
 		<label>Username</label>
 	  </div>
-	  <div class="inputBox">
-		<input type="password" name="password" required value=""
-			   onkeyup="this.setAttribute('value', this.value);"
-			   pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{6,}"
-			   title="Debe contener al menos un número, una letra mayúscula y 6 o más caracteres">
+	<div class="inputBox">
+		<input type="password" id="password" name="password" [(ngModel)]="password" required/>
 		<label>Password</label>
-	  </div>
-	  <input type="submit" name="sign-in" value="Sign In">
+	</div>
+	  <input type="submit" name="sign-in" value="Sign In" >
 	</form>
   </div>
