Proyecto Integrador: login resuelto

--- a/FrontEnd/src/app/components/header/header.component.html
+++ b/FrontEnd/src/app/components/header/header.component.html
@@ -13,7 +13,7 @@
         <li class="options"><a class="btn-style" id="projects-btn">Projects</a></li>
         <li class="options"><a class="btn-style" id="contact-btn" >Contact</a></li>
         <li class="options2"><a href="/login" class="login-btn" id="login-btn" (click)="login()" *ngIf="!isLogged">Login</a></li>
-        <li class="options2"><a class="login-btn" id="login-btn" (click)="onLogOut()" *ngIf="isLogged">Logout</a></li>
+        <li class="options2"><a href="/login"class="login-btn" id="login-btn" (click)="onLogOut()" *ngIf="isLogged">Logout</a></li>
       </ul>
     </nav>
   </header>
