Proyecto integrador: respuesta http solucionado

--- a/FrontEnd/src/app/components/home/home.component.html
+++ b/FrontEnd/src/app/components/home/home.component.html
@@ -3,8 +3,8 @@
       <h3>¡Hello!, my name is</h3>
       <h1 id="nombre"><span>{{persona.nombre}}</span> {{persona.apellido}}</h1>
       <div class="cv">
-        <a class="light-btn" href="assets/docs/LucianoAnselmino-CV.pdf" target="_blank">Watch CV</a>
+        <a class="light-btn" href={{persona.cv}}>Watch CV</a>
       </div>
     </div>
-    <img src={{persona.img}} alt="Luciano Anselmino" data-aos="zoom-in-up" data-aos-duration="1000">
+    <img src={{persona.img}} alt="Foto de perfil" data-aos="zoom-in-up" data-aos-duration="1000">
   </div>
