--- a/FrontEnd/src/app/components/about/about.component.html
+++ b/FrontEnd/src/app/components/about/about.component.html
@@ -3,23 +3,17 @@
     data-aos-duration="500">
     <div class="coder">
       <h1>About <span>Me</span></h1>
-      <img src="assets/img/programmer.png" alt="Programmer">
+      <img src= {{persona.imgaboutme}} alt="ImgAboutMe">
     </div>
     <div class="about-me">
-      <p class="text">
-        I am 34 years old and I currently reside in the city of Rosario, Santa Fe, Argentina.<br> 
-        My main area of interest is the application of informatics to health research,<br>  
-        I believe it is a field with great potential.<br> 
-        I like to explore, design and create.<br> 
-        I enjoy learning from others and exchanging knowledge.<br> 
-      </p>
+      <p class="text">{{persona.mydescription}}</p>
       <div class="hobbies">
         <h3>My <span>Interest</span></h3>
         <ul>
-          <p>Bioinformatics</p>
-          <p>Big data visualization</p>
-          <p>Software Development</p>
-          <p>Artificial Intelligence</p>
+          <p>{{persona.myinterest1}}</p>
+          <p>{{persona.myinterest2}}</p>
+          <p>{{persona.myinterest3}}</p>
+          <p>{{persona.myinterest4}}</p>
         </ul>
       </div>
     </div>
