problema con editar home

--- a/FrontEnd/src/app/components/about/about.component.html
+++ b/FrontEnd/src/app/components/about/about.component.html
@@ -3,17 +3,17 @@
     data-aos-duration="500">
     <div class="coder">
       <h1>About <span>Me</span></h1>
-      <img src= {{persona.imgaboutme}} alt="ImgAboutMe">
+      <img src= {{about.imgaboutme}} alt="ImgAboutMe">
     </div>
     <div class="about-me">
-      <p class="text">{{persona.mydescription}}</p>
+      <p class="text">{{about.mydescription}}</p>
       <div class="hobbies">
         <h3>My <span>Interest</span></h3>
         <ul>
-          <p>{{persona.myinterest1}}</p>
-          <p>{{persona.myinterest2}}</p>
-          <p>{{persona.myinterest3}}</p>
-          <p>{{persona.myinterest4}}</p>
+          <p>{{about.myinterest1}}</p>
+          <p>{{about.myinterest2}}</p>
+          <p>{{about.myinterest3}}</p>
+          <p>{{about.myinterest4}}</p>
         </ul>
       </div>
     </div>
