--- a/FrontEnd/src/app/components/header/header.component.css
+++ b/FrontEnd/src/app/components/header/header.component.css
@@ -1,6 +1,7 @@
 header{
 
     position: fixed;
+    z-index: 1;
     box-shadow: inset 0 0 5px 0 #f9f9fa;
     background-color: #000000;
     height: 51px;
@@ -10,6 +11,7 @@ header{
     font-weight: bold;
     z-index: 1;
   }
+
   
   img, svg {
     vertical-align: middle;
