--- a/FrontEnd/src/app/components/login/login.component.html
+++ b/FrontEnd/src/app/components/login/login.component.html
@@ -1,6 +1,7 @@
-<div class="box"  
+
+<div class="box col-centered"
 style="text-align:center"
-data-aos="fade-down" data-aos-duration="1000">
+data-aos="fade-down" data-aos-duration="1000" >
 	<h2>Login</h2>
 	<form #f="ngForm" (ngSubmit)="onLogin()" novalidate>
 	  <div class="inputBox">
@@ -14,3 +15,4 @@ data-aos="fade-down" data-aos-duration="1000">
 	<input type="submit" name="sign-in" value="Sign In">
 	</form>
   </div>
+  
