--- a/FrontEnd/src/app/components/home/home.component.html
+++ b/FrontEnd/src/app/components/home/home.component.html
@@ -2,7 +2,7 @@
   <ul class="options" *ngIf="isLogged">
     <li>
     <span class="btn-label"></span>
-    <i class="fa-brands"><mat-icon routerLink="/editar/{{persona.id}}" *ngIf="isLogged">edit</mat-icon></i>
+    <i class="fa-brands"><mat-icon routerLink="/edithome/{{persona.id}}" *ngIf="isLogged">edit</mat-icon></i>
     </li>
     </ul>
     <div class="welcome" data-aos="fade-up" data-aos-duration="1000">
