--- a/FrontEnd/src/app/components/tech/tech.component.html
+++ b/FrontEnd/src/app/components/tech/tech.component.html
@@ -21,7 +21,7 @@ data-aos-duration="500">
     <ul class="options2" *ngIf="isLogged">
     <li>
     <span class="btn-label"></span>
-    <i class="fa-brands"><mat-icon style="font-family: 'Material Icons Sharp'"  routerLink="/edittech/{{Tecnologias.id}}" *ngIf="isLogged">edite</mat-icon></i>
+    <i class="fa-brands"><mat-icon style="font-family: 'Material Icons Sharp'"  routerLink="/edittech/{{Tecnologias.id}}" *ngIf="isLogged">edit</mat-icon></i>
     </li>
     <li>
     <span class="btn-label"></span>
