--- a/FrontEnd/src/app/components/about/about.component.css
+++ b/FrontEnd/src/app/components/about/about.component.css
@@ -4,7 +4,7 @@
   display: flex;
 	flex-direction: row;
   justify-content: center;
-	column-gap: 100px;
+	column-gap: 0px;
   background-color: #000000;
   margin: 0 0 -20px;
 
@@ -13,7 +13,7 @@
 .coder{
   margin-top: 0px;
   margin-left: 20px;
-  gap: 25px;
+  gap: 0px;
   display: flex;
 	flex-direction: column;
 	justify-content: flex-start;
@@ -28,6 +28,7 @@
 	justify-content: flex-start;
   align-items: center;
   margin-top: 100px;
+  width: 20cm;
   background-color: #000000;
 }
 
@@ -76,7 +77,7 @@
   margin-top: 25px;
   margin-right: 50px;
   text-align: center;
-  line-height: 100%;
+  line-height: 150%;
 }
 
 .hobbies h3{
@@ -95,3 +96,66 @@
 
   margin-top: 20px;
 }
+
+.fab-container {
+  position: fixed;
+  bottom: 50px;
+  right: 50px;
+  cursor: pointer;
+}
+
+.iconbutton {
+  width: 30px;
+  height: 30px;
+  border-radius: 100%;
+  background: #ffffff;
+  box-shadow: 10px 10px 5px #aaaaaa;
+}
+
+
+.iconbutton i {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+  color: white;
+}
+
+.options li {
+  display: flex;
+  justify-content: flex-start;
+  padding: 5px;
+}
+
+.options {
+  position: absolute;
+  top: 50px;
+  right: 40px;
+}
+
+
+.mat-icon {
+  color: #fff;
+  text-shadow: 0 0 10px rgb(104, 104, 106);
+  cursor: pointer;
+  cursor: pointer;
+  font-size: 40px;
+  display: flex;
+  border-radius: 100%;
+  border-style: solid;
+  border-right-width: 2px;
+  padding: 0.3em;
+  width:50px;
+  text-align: center;
+  display: inline;
+  border-radius: 50%;
+  line-height: 50px;
+}
+
+
+
+
+
+
+
+
