--- a/FrontEnd/src/app/components/home/home.component.css
+++ b/FrontEnd/src/app/components/home/home.component.css
@@ -107,7 +107,7 @@
 .options {
   position: absolute;
   top: 100px;
-  right: 60px;
+  right: 40px;
 }
 
 
@@ -118,7 +118,15 @@
   cursor: pointer;
   font-size: 40px;
   display: flex;
-
+  border-radius: 100%;
+  border-style: solid;
+  border-right-width: 2px;
+  padding: 0.3em;
+  width:50px;
+  text-align: center;
+  display: inline;
+  border-radius: 50%;
+  line-height: 50px;
 
 }
 
