--- a/FrontEnd/src/app/components/home/home.component.css
+++ b/FrontEnd/src/app/components/home/home.component.css
@@ -106,8 +106,8 @@
 
 .options {
   position: absolute;
-  top: 100px;
-  right: 40px;
+  top: 1.8cm;
+  right: 8px;
 }
 
 
@@ -127,6 +127,8 @@
   display: inline;
   border-radius: 50%;
   line-height: 50px;
+  position:relative ;
+  z-index: 1000;
 
 }
 
