--- a/FrontEnd/src/app/components/about/edit-about.component.css
+++ b/FrontEnd/src/app/components/about/edit-about.component.css
@@ -6,7 +6,7 @@
     margin-left: auto;
     margin-right: auto;
     transform: translate(-50%, -50%);
-    width: 35rem;
+    width: 12cm;
     padding: 1rem;
     box-sizing: border-box;
     border-style:solid;
