--- a/FrontEnd/src/app/components/contact/editcontac.component.html
+++ b/FrontEnd/src/app/components/contact/editcontac.component.html
@@ -1,7 +1,7 @@
 <div class="box col-centered" style="text-align:center"
 data-aos="fade-right" data-aos-duration="1000" *ngIf="contactEdit" >
 <h2>Edit your contact infomation</h2>
-            <form (ngSubmit)="onEdit()" novalidate #f="ngForm" >
+            <form (ngSubmit)="onUpdate()" novalidate #f="ngForm" >
                 <div class="inputBox">
                     <input type="text" id="gmail" name="gmail" [(ngModel)]="contactEdit.gmail" required>
                     <label for="gmail">Enter your gmail: </label>
