--- a/FrontEnd/src/app/components/projects/projects.component.css
+++ b/FrontEnd/src/app/components/projects/projects.component.css
@@ -1,11 +1,15 @@
 
 .projects {
-
   width: 100%;
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
   align-items: center;
+}
+
+.projects {
+
+  height: auto;
 }
 
 .div-direction{
@@ -127,10 +131,9 @@
   }
   
   .options {
-    list-style-type: none;
     position: absolute;
-    top: 50px;
-    right: 30px;
+    top: -1.5cm;
+    right: 8px;
   }
   
   .options2 {
@@ -162,6 +165,7 @@
     display: inline;
     border-radius: 50%;
     line-height: 80px;
+    top:1cm;
     }
   
     
