--- a/FrontEnd/src/app/components/tech/new-tecnologias.component.css
+++ b/FrontEnd/src/app/components/tech/new-tecnologias.component.css
@@ -1,21 +1,20 @@
 .box {
-    width: 1000px;
-    position: absolute;
-    bottom: -1360px;
-    right: 0;
-    left: 0;
-    margin-left: auto;
-    margin-right: auto;
-    transform: translate(-50%, -50%);
-    width: 25rem;
-    padding: 2.5rem;
-    box-sizing: border-box;
-    border-style:solid;
-    border-color: #232325;
-    background-color: #fff;
-    border-radius: 0.625rem;
-    font-weight: bold;
-  }
+  position:fixed;
+  bottom: 5cm ;
+  overflow: auto;
+  right: 0;
+  left: 0;
+  margin:auto;
+  transform: translate(-50%, -50%);
+  width: 12cm;
+  padding: 1rem;
+  box-sizing: border-box;
+  border-style:solid;
+  border-color: #232325;
+  background-color: #fff;
+  border-radius: 0.625rem;
+  font-weight: bold;
+}
 
   .box h2 {
     margin: 0 0 1.875rem;
