--- a/FrontEnd/src/app/components/header/header.component.html
+++ b/FrontEnd/src/app/components/header/header.component.html
@@ -5,7 +5,7 @@
      <label for="side-menu-btn" class="menu-btn">
         <i class="fas fa-bars"></i>
       </label>
-      <a href="http://localhost:4200"><img src="assets/img/logoAP.jpg" alt="logoAP"></a>
+      <a href="https://frontproyectointegradorap.web.app/"><img src="assets/img/logoAP.jpg" alt="logoAP"></a>
       <ul class="menu" id="menu">
         <li class="options"><a class="btn-style" id="home-btn">Home</a></li>
         <li class="options"><a class="btn-style" id="aboutme-btn">About me</a></li>
